--- a/practical exam.Rmd
+++ b/practical exam.Rmd
@@ -10,7 +10,7 @@ output: html_document
 
 I, Meiqi Xu, confirm that the work presented in this assessment is my own. Where information has been derived from other sources, I confirm that this has been indicated in the work.
 
-date: 2023.12.6
+date: 2023-12-6
 
 # Project Scope
 
